[package]
name = "mox"
version = "0.1.0"
edition = "2024"

[dependencies]
# Base de données
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Hashing ultra-rapide (Low-end friendly)
blake3 = "1.5.0"
# Gestion d'erreurs
anyhow = "1.0"
# Manipulation de chemins de fichiers
walkdir = "2.4"
# Sérialisation (pour les futurs manifests)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"