[package]
name = "mox"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Ultra-fast hashing (Low-end friendly)
blake3 = "1.5.0"
# Error handling
anyhow = "1.0"
# File path manipulation
walkdir = "2.4"
# Serialization (for future manifests)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI Argument Parser
clap = { version = "4.4", features = ["derive"] }